ns-blog/assets/original.css
html {
    scroll-behavior: smooth;
}

content {
  flex: 6;
}

.wrapper {
   display: flex; 
  justify-content: space-between;
}

.main {
  height: 150vh;
}

.custom-toc {
  padding: 20px;
  flex: 1;
  height: 80vh;
  position: sticky;
  top: 5%;
  overflow-y: scroll;
} 

.custom-toc a {
  color: #8cc2dd; /* Change to your desired color */
  text-decoration: none; /* Optionally remove underline */
}

.custom-toc a:hover {
  color: #0056b3; /* Change to a darker color on hover */
  text-decoration: underline; /* Optionally add underline on hover */
}


body {
    margin: auto;
    padding: 20px;
    text-align: left;
    background-color: #1d1f27;
    word-wrap: break-word;
    overflow-wrap: break-word;
    line-height: 1.5;
    color: #c9d1d9;
  }
  
  h1,
  h2,
  h3,
  h4,
  h5,
  h6,
  strong,
  b {
    color: #eee;
  }
  
  a {
    color: #8cc2dd;
  }
  
  .title {
    text-decoration: none;
    border: 0;
  }
  .title h1 {
    font-size: 24px;
    margin: 19.92px 0 19.92px 0;
  }
  
  .title span {
    font-weight: 400;
  }
  
  nav a {
    margin-right: 10px;
  }
  
  textarea {
    background-color: #252525;
    color: #ddd;
    width: 100%;
    font-size: 16px;
  }
  
  input {
    background-color: #252525;
    color: #ddd;
    font-size: 16px;
  }
  
  content {
    line-height: 1.6;
  }
  
  table {
    width: 100%;
  }
  
  table,
  th,
  td {
    border: 1px solid;
    border-collapse: collapse;
    border-color: #c9d1d9;
    padding: 5px;
  }
  
  img {
    max-width: 100%;
    height: auto;
  }

  code {
    padding: 2px 5px;
    color: #f8f8f2;
    background-color: #282a36;
  }
  
pre {
  margin: 0px;
  background-color: #282a36;
  padding: 10px;
  border-radius: 5px;
  overflow-x: auto; /* Enables horizontal scrolling if needed */
  white-space: pre-wrap; /* Ensures text wraps */
  word-wrap: break-word; /* Helps break long words */
  max-width: 100%; /* Prevents overflow */
}

pre code {
  display: block;
  font-size: 14px;
  line-height: 1.4;
  overflow-wrap: break-word;
  word-break: break-word;
  white-space: pre-wrap;
}

.highlight {
  padding: 5px;
  color: #f8f8f2;
  background-color: #282a36;
}

span.title {
  font-style: italic;
}
    /*
  pre code {
    display: block;
    padding: 20px;
    white-space: pre-wrap;
    font-size: 14px;
    overflow-x: auto;
    text-wrap: nowrap;
  }
    */
  
  blockquote {
    border-left: 1px solid #999;
    color: #ccc;
    padding-left: 20px;
    font-style: italic;
  }
  
  footer {
    padding: 25px;
    text-align: center;
  }
  
  .helptext {
    color: #aaa;
    font-size: small;
  }
  
  .errorlist {
    color: #eba613;
    font-size: small;
  }
  
  /* blog posts */
  ul.blog-posts {
    list-style-type: none;
    padding: unset;
  }
  
  ul.blog-posts li {
    display: flex;
    margin-bottom: 10px;
  }
  
  ul.blog-posts li span {
    flex: 0 0 130px;
  }
  
  ul.blog-posts li a:visited {
    color: #8b6fcb;
  }
  
  a.blog-tags {
    line-height: 2;
    margin-right: 12px;
  }
  
  h3.blog-filter {
    margin-bottom: 0;
  }
  
  .disabled {
    color: currentColor;
    cursor: not-allowed;
    opacity: 0.7;
  }
  
  p.byline {
    font-style: italic;
  }
  
  /* "Skip to main content" link */
  .skip-link {
    position: absolute;
    top: 5;
    transform: translateY(-600%);
    transition: transform 0.5s;
    background-color: #1d1f27;
    padding: 6px;
  }
  
  .skip-link:focus {
    transform: translateY(0%);
  }
  
  figure {
    margin-inline-start: 0em;
    margin-inline-end: 0em;
  }
  
  figcaption > p {
    margin-block-start: 0px;
    text-align: center;
    font-style: italic;
    color: #ccc;
  }



/* STYLING FOR ANCHOR LINKS */
:root {
    --main: #137faa;
  }
  
a.anchor {
    color: var(--main);
    text-decoration: none !important;
  }
  
  @media (hover: hover) {
      a.anchor {
        opacity: 0;
      }
    h1:hover a.anchor,
    h2:hover a.anchor,
    h3:hover a.anchor,
    h4:hover a.anchor,
    h5:hover a.anchor,
    h6:hover a.anchor {
      opacity: 1;
    }
  }
  
  @media (hover: none) {
      a.anchor {
        opacity: 0;
      }
  }
  

